# weird-code

./: .gitignore  aiagent.py  deeplearning.py  gnn.py  pyproject.toml  requirements.txt  rn.py  tfidf.py
chatbot/: advanced.py  advanced_ecommerce.py  app_ecommerce.py  app_healthcare.py  ecommerce.py  ecommerce_kb.db  ecommerce_knowledgebase.json  healthcare.py  healthcare_kb.db  healthcare_knowledgebase.json  index.html  train_classifier.py
chatbot/checkpoints/model/runs/Jun09_17-34-29_DESKTOP-B3955HR/: events.out.tfevents.1749465270.DESKTOP-B3955HR.2790.0
chatbot/fine_tuned_ecommerce_model/: README.md
chatbot/templates/: index.html
