[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "TuandG",email = "dttung2113@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "accelerate @ git+https://github.com/huggingface/accelerate.git",
    "flask (>=3.1.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
